Reportes - filtros de clientes - steps 1 & 2